tcw3/designer/tests/bad/input_circular_this.tcwdl
pub comp crate::Comp2 {
    //~^ ERROR A circular dependency was detected
    // `this` is available only after all fields are initialized
    wire wire: *const () = get!(&self) as *const _ as *const ();
}
